# saliency-depth-of-field

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: README.md  config.py
backend/api/: main.py
backend/pipeline/: blend_maps.py  gen_blur.py  gen_depth.py  gen_saliency.py  models.py  pipeline.md  run.py
backend/utils/: image.py
depth/: gen_depth.py
eye-tracking-pretrained/: gen_saliency.py
eye_tracking_pretrained/: eye-tracking.md
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ImageUploader.jsx  ResultViewer.jsx
models/: config.py
models/data/: dataset.py
models/saliency_net/: losses.py  model.py  model_config.py  test.py  train.py  train_config.py  transforms.py
models/saliency_net/data/: dataset.py  preprocess.py
models/utils/: image.py
object-oriented/: gen_saliency.py  object-oriented.md
object-oriented-pretrained/: gen_saliency.py  object-oriented.md  requirements.txt  result.py
object_oriented_pretrained/: object-oriented.md
src/: blend_maps.py  config.py  gen_blur.py  gen_depth.py  gen_saliency.py  pipeline.py  saliency.md
src/pipeline/: blend_maps.py  device.py  gen_blur.py  gen_depth.py  gen_saliency.py  pipeline.md  pipeline.py  run.py  utils.py
src/saliency_net/: losses.py  model.py  test.py  train.py  train_config.py  transforms.py
src/saliency_net/data/: dataset.py  preprocess.py
src/utils/: image.py  transforms.py
