[project]
name = "saliency-depth-of-field"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "python-multipart>=0.0.30",
    "ruff>=0.15.15",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "tensorflow>=2.21.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "uvicorn>=0.48.0",
]

[tool.ruff]
exclude = [
    ".venv",
    "backend/pipeline/TranSalNet",
    "backend/pipeline/PyNET_Bokeh",
]
